; ModuleID = '/home/carl/AnghaBench/linux/arch/arc/kernel/extr_mcip.c_idu_irq_ack.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arc/kernel/extr_mcip.c_idu_irq_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@mcip_lock = common dso_local global i32 0, align 4
@CMD_IDU_ACK_CIRQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @idu_irq_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @idu_irq_ack(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca i64, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i32 @raw_spin_lock_irqsave(i32* @mcip_lock, i64 %4)
  %6 = load i32, i32* @CMD_IDU_ACK_CIRQ, align 4
  %7 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %8 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @__mcip_cmd(i32 %6, i32 %9)
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @raw_spin_unlock_irqrestore(i32* @mcip_lock, i64 %11)
  ret void
}

declare dso_local i32 @raw_spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__mcip_cmd(i32, i32) #1

declare dso_local i32 @raw_spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
